Updated the heading

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Student Bio</title>
+    <title>Slavic's Bio</title>
   
   </head>
 
@@ -11,7 +11,7 @@
     <!-- Site Header -->
     <header>
       <!--The h1 tag should be used for the most important heading-->
-      <h1>Student Bio</h1>
+      <h2>Student Bio</h2>
     </header>
 
     <!-- Section 1: Bio -->
